[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/puff.png" type="Texture" id=1]
[ext_resource path="res://TestEnv/FireCore.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Utils/Sounds/FlameSound.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.133005, 0.458128, 0.729064, 1 )
colors = PoolColorArray( 0.796875, 0.796875, 0.796875, 1, 1, 0.788235, 0.309804, 1, 0.980392, 0.419608, 0.211765, 1, 0.682353, 0.207843, 0.207843, 1, 0.682353, 0.207843, 0.207843, 0.00392157 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 500.0
_data = [ Vector2( 0.00632912, 500 ), 0.0, 0.0, 0, 0, Vector2( 0.487342, 138.864 ), 1500.2, 0.0, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.539823, 1 ), 0.0, -2.30109, 0, 0, Vector2( 1, 0.454545 ), -0.299621, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 1.0
gravity = Vector3( -8, 0, 0 )
initial_velocity = 1200.0
initial_velocity_random = 0.5
angular_velocity_random = 0.5
orbit_velocity = 0.1
orbit_velocity_random = 1.0
linear_accel_curve = SubResource( 4 )
damping = 100.0
damping_random = 0.85
angle = 200.0
angle_random = 0.5
scale = 0.3
scale_random = 0.2
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="Animation" id=9]
resource_name = "flame_on"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlameHitBox/Collider:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ), Vector2( 700, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlameHitBox/Collider:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 5 ) ]
}

[node name="FireCore" type="Particles2D"]
self_modulate = Color( 1.1, 1.1, 1.1, 1 )
amount = 700
randomness = 1.0
visibility_rect = Rect2( -512, -300, 1024, 600 )
local_coords = false
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="FlameHitBox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="FlameHitBox"]
position = Vector2( 387.612, -21.0746 )
scale = Vector2( 1, 3.21493 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="FlameHitBox/Collider"]
visible = false
texture = ExtResource( 3 )

[node name="HitBoxAnim" type="AnimationPlayer" parent="."]
anims/flame_on = SubResource( 9 )

[node name="CPUMobileRender" type="CPUParticles2D" parent="."]
emitting = false

[node name="FlameSound" type="Node2D" parent="." groups=[
"sounds",
]]
script = ExtResource( 4 )

[node name="Sfx" type="AudioStreamPlayer2D" parent="FlameSound"]
[connection signal="area_entered" from="FlameHitBox" to="." method="_on_FlameHitBox_area_entered"]
[connection signal="body_entered" from="FlameHitBox" to="." method="_on_FlameHitBox_body_entered"]
